samples/_failures_safe/1761040216_c6d611_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_86ed7c27.c: In function ‘main’:
./samples/SAFE/__tmp_86ed7c27.c:147:24: error: missing terminating " character
  147 |                 printf("Determinant calculation only supported for 1x1
      |                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_86ed7c27.c:147:17: error: expected expression at end of input
  147 |                 printf("Determinant calculation only supported for 1x1
      |                 ^~~~~~
./samples/SAFE/__tmp_86ed7c27.c:147:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_86ed7c27.c:147:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_86ed7c27.c:147:17: error: expected declaration or statement at end of input
